# DominandoPhyton

./: app.py  app2.py  app3.py  pyproject.toml
material_modulo03/: collections.ipynb  dicionarios.ipynb  listas.ipynb  preview.py  tuplas.ipynb
material_modulo04/: break_continue.ipynb  for.ipynb  if_else_elif.ipynb  while.py
