[tool.poetry]
name = "projeto-streamlit"
version = "0.1.0"
description = "Módulo Streamlit"
authors = ["Vinicius Rocha Lima <vinicius@empowerdata.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
streamlit = "^1.35.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
